# flask-portfolio

./: README.md  app.py  pyproject.toml
app/: README.md  pyproject.toml  run.py
app/app/: views.py
app/app/static/css/: style.scss.css  style.scss.css.map
app/app/templates/: home.html
app/app/templates/admin/: dashboard.html  profile.html
app/app/templates/admin/templates/: admin_template.html
app/app/templates/public/: about.html  index.html  jinja.html  profile.html  sign_up.html
app/app/templates/public/templates/: public_template.html
templates/: about.html  home.html  main.html
