[tool.poetry]
name = "flask-portfolio"
version = "0.1.0"
description = "Portfolio site created with Flask"
authors = ["jnutterdev <hello@jnutterdev.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
